networking/vpc.tf
resource "aws_vpc" "ewp_vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true
  instance_tenancy     = "default"
  enable_classiclink   = "false"

  tags = {
    Name = "ewp_vpc"
  }
}
